// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FACheckBox/> Checked, clickable 1`] = `
<span
  className="no-highlight clickable"
  onClick={[Function]}
>
  <span
    className="fa fa-lg fa-check-square"
    style={
      {
        "color": "#0073BB",
      }
    }
  />
</span>
`;

exports[`<FACheckBox/> Checked, view-only 1`] = `
<span
  className="no-highlight"
  onClick={[Function]}
>
  <span
    className="fa fa-lg fa-check-square"
    style={
      {
        "color": "#0073BB",
      }
    }
  />
</span>
`;

exports[`<FACheckBox/> Unchecked, clickable 1`] = `
<span
  className="no-highlight clickable"
  onClick={[Function]}
>
  <span
    className="fa fa-lg fa-square"
    style={
      {
        "color": "#ADADAD",
      }
    }
  />
</span>
`;

exports[`<FACheckBox/> Unchecked, view-only 1`] = `
<span
  className="no-highlight"
  onClick={[Function]}
>
  <span
    className="fa fa-lg fa-square"
    style={
      {
        "color": "#ADADAD",
      }
    }
  />
</span>
`;
